# liquid-edge-lln-kit

./: .bandit  .dockerignore  .env.example  .gitattributes  .gitlab-ci.yml  .license_header.txt  .pre-commit-config.yaml  AUTONOMOUS_SDLC_COMPLETE_DOCUMENTATION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_ENHANCEMENT_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.production  FINAL_AUTONOMOUS_EXECUTION_REPORT.md  FINAL_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  I18N_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEUROMORPHIC_LIQUID_RESEARCH_BREAKTHROUGH_ANALYSIS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUANTUM_AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  README.md  SECURITY.md  SLSA_COMPLIANCE.md  WORKFLOWS_FOR_MANUAL_SETUP.md  WORKFLOWS_SETUP_GUIDE.md  alert-rules.yml  autonomous_comprehensive_quality_gates_final.py  autonomous_evolutionary_quality_gates.py  (+123 more)
.devcontainer/: Dockerfile  devcontainer.json  environment.yml  post-create.sh  post-start.sh  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docker.yml  performance.yml  release.yml  sbom.yml  security.yml
.terragon/: config.yaml  value-metrics.json
deployment/: deployment-summary.json
deployment/container/: Dockerfile.production  docker-compose.production.yml
deployment/deploy-1755820597-7899781a/: DEPLOYMENT.md  Dockerfile  deploy.sh  grafana-dashboard.json  health-check.sh  k8s-deployment.yaml  k8s-ingress.yaml  k8s-service.yaml  liquid_edge_rules.yml  prometheus.yml  rollback.sh
deployment/deploy-20250810-064348-c757fa29/: DEPLOYMENT.md  OPERATIONS.md  deploy.sh  k8s-deployment.yaml  k8s-service.yaml  prometheus.yml  rollback.sh
deployment/deploy-20250820-200135-de19fce1/: DEPLOYMENT.md  Dockerfile  OPERATIONS.md  deploy.sh  grafana-dashboard.json  k8s-deployment.yaml  k8s-ingress.yaml  rollback.sh
deployment/infrastructure/: main.tf
deployment/kubernetes/: k8s-deployment.yaml  k8s-ingress.yaml  k8s-monitoring.yaml
deployment/monitoring/: grafana-dashboard.json  liquid_edge_rules.yml  prometheus.yml
deployment/scripts/: deploy.sh  health-check.sh  rollback.sh
deployment/security/: network-policies.yaml  pod-security-policy.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INTEGRATION_GUIDE.md  MONITORING.md  PERFORMANCE.md  ROADMAP.md  SECURITY_ARCHITECTURE.md  SLA.md  i18n_guide.md  observability.md
docs/adr/: 001-jax-backend-choice.md  002-cmsis-nn-deployment.md  003-energy-first-design.md  README.md  template.md
docs/runbooks/: README.md  model_deployment.md
docs/testing/: README.md  performance_testing.md
docs/workflows/: REQUIRED_WORKFLOWS.md  ci-cd.md  ci.md  security.md  testing.md
examples/: README.md  autonomous_scaling_demo.py  basic_training.py  cli_i18n_demo.py  i18n_integration_demo.py  mcu_deployment.py  production_deployment_demo.py  production_robustness.py  production_robustness_demo.py  pure_python_quantum_demo.py  pure_python_scaling_demo.py  pure_python_self_healing_demo.py  quantum_breakthrough_demo.py  research_comparative_study.py  research_comparative_study_advanced.py  robust_security_demo.py  robust_training.py  scaling_optimization.py  scaling_optimization_demo.py  scaling_performance_demo.py  self_healing_demo.py  simple_i18n_demo.py  simple_robust_training.py  simple_scaling_demo.py  ultra_fast_training.py
monitoring/: docker-compose.monitoring.yml  grafana-dashboard.json  liquid_edge_rules.yml  prometheus.yml
ops/: disaster-recovery.md  incident-response.md
results/: autonomous_production_deployment_report_76182e3b.json  autonomous_sdlc_completion_sdlc-final-1755827017.json  autonomous_sdlc_final_completion_1756294469.json  autonomous_sdlc_final_report_1756294469.md  autonomous_sdlc_final_report_sdlc-final-1755827017.md  comprehensive_quality_gates_final.json  comprehensive_quality_gates_final_1756294378.json  comprehensive_quality_gates_report.json  comprehensive_quality_report.json  energy_analysis.json  final_production_deployment.json  generation1_pure_python_quantum_breakthrough.json  generation1_pure_python_simple_demo.json  generation1_simple_demo.json  generation2_robust_demo.json  generation2_robust_quantum_liquid.json  generation3_fast_scaled_quantum.json  generation3_scaled_demo.json  global_deployment_1756071335.json  global_deployment_1756294660.json  global_deployment_documentation_1756071335.md  global_deployment_documentation_1756294660.md  global_production_deployment_report.json  hyperscale_demo_1755719542.json  hyperscale_documentation_1756070867.md  hyperscale_neuromorphic_liquid_1756070867.json  loihi_neuromorphic_liquid.py  neuromorphic_liquid_breakthrough_1756070472.json  neuromorphic_liquid_cortex_m7.c  neuromorphic_liquid_gen2_research_paper_1756293882.md  neuromorphic_liquid_gen2_robustness_1756294034.json  neuromorphic_liquid_gen2_temporal_breakthrough_1756293882.json  neuromorphic_liquid_gen3_hyperscale_1756294185.json  neuromorphic_liquid_paper_1756070472.md  production_deployment_report.json  production_deployment_report_1756172341.md  pure_python_hyperscale_gen3_1756171628.json  pure_python_hyperscale_gen3_1756171628.md  pure_python_neuromorphic_quantum_gen1_1756170829.json  pure_python_neuromorphic_quantum_gen1_1756170829.md  (+38 more)
scripts/: benchmark.py  build.sh  changelog_generator.py  metrics_collector.py  security_audit.py  security_audit_fixed.py  security_scan.py
src/liquid_edge/: __init__.py  advanced_security.py  autonomous_evolution.py  autonomous_scaling.py  (+30 more)
tests/: __init__.py  conftest.py  test_basic.py  test_benchmarks.py  test_core.py  test_i18n.py  test_integration_comprehensive.py  test_performance.py
(+4 files in other folders)
